--- a/src/pages/Swap.css
+++ b/src/pages/Swap.css
@@ -1,7 +1,6 @@
 .header-area {
   height: 13vh;
   background-color: rgb(232, 0, 0);
-  width: 100%;
 }
 
 .icon-label-container {
@@ -18,14 +17,73 @@
   margin: 0 50px;
 }
 .icon-label-item ion-icon {
-  font-size: 60px;
+  font-size: 50px;
   color: rgb(232, 0, 0);
-}
-
-.icon-label-item ion-label {
-  margin-top: 10px;
 }
 .icon-label-item ion-label {
   color: black;
   font-size: 20px;
+  font-weight: 100;
+}
+
+hr {
+  margin-top: 1rem;
+  background: #f1efef;
+}
+
+.swap-section {
+  background: #f1efef !important;
+  border-radius: 10px 10px;
+  box-shadow: 0px 0px 3px 0px rgba(128, 128, 128, 0.75);
+}
+.swap-section ion-icon {
+  font-size: 45px;
+  color: rgb(232, 0, 0);
+}
+.swap-section ion-text,
+.label {
+  color: black;
+  font-size: 20px;
+  font-weight: 100;
+}
+.heartText {
+  display: flex;
+  align-items: center;
+  text-align: center;
+  float: right;
+}
+.heartText ion-icon {
+  margin-right: 10px;
+}
+
+.offers {
+  display: flex;
+  justify-content: space-between;
+  background: #fff;
+  padding: 20px;
+}
+
+.offers .offer1 {
+  border: 1px solid rgb(232, 0, 0);
+  border-radius: 20px;
+  padding: 10px 20px;
+  color: black;
+}
+
+.token-img {
+  height: 39px;
+  width: 39px;
+  margin-right: 10px;
+}
+
+.lockedIcon {
+  padding: 5px 0;
+  position: relative;
+  top: 20px;
+  right: 40px;
+}
+
+.lockedIcon > ion-text {
+  font-size: 14px;
+  color: grey;
 }
