--- a/src/pages/Header.css
+++ b/src/pages/Header.css
@@ -15,3 +15,22 @@
 .header-color {
   background: rgb(206, 1, 1) !important;
 }
+
+.setthings {
+  display: flex;
+  padding: 10px;
+}
+
+.setthings ion-avatar ion-img {
+  margin-left: 10px;
+}
+
+.setting-icons ion-avatar ion-icon {
+  color: rgb(232, 1, 1) !important;
+  /* background: red; */
+}
+
+.backbtnnoti {
+  color: #ffffff !important;
+  background: fff !important;
+}
