--- a/src/pages/Wallet.css
+++ b/src/pages/Wallet.css
@@ -1,10 +1,14 @@
 .header-area-wallet {
   height: 35vh;
   background: rgb(232, 0, 0);
-  border-radius: 0 0 10% 10%;
+  border-radius: 0 0 5% 5%;
   position: sticky;
   top: 0;
   z-index: 1;
+  overflow: hidden;
+}
+.header-area-wallet::-webkit-scrollbar {
+  display: none;
 }
 
 .icon-label-container {
@@ -99,14 +103,25 @@ hr {
   font-weight: 100;
 }
 
-.logo {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 20vh;
-  margin: 0 70px;
-}
-.logo ion-icon {
-  font-size: 100px;
+.logoWallet {
+  position: absolute;
+  top: 152px;
+  left: 35%;
+  font-size: 120px;
   color: #fff;
+}
+
+.downArrow {
+  margin-top: 8px;
+  transition: 0.2s ease-in-out;
+}
+.upIconWallet {
+  position: absolute;
+  top: 10vh;
+}
+
+.walletStats {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 20px;
 }
