--- a/src/pages/Team.css
+++ b/src/pages/Team.css
@@ -1,7 +1,7 @@
 .team-container {
   height: 100px;
   border-radius: 20px;
-  box-shadow: 0px 0px 5px 0 #ccc;
+  box-shadow: 0px 0px 5px 0 #8f3434;
   margin: 10px 10px 25px 10px;
   padding: 10px;
 }
@@ -10,4 +10,10 @@
 }
 .teamText ion-text {
   color: gray;
+}
+
+@media (max-width: 358px) {
+  .team-container {
+    height: auto;
+  }
 }
